Day 9 Works yay

--- a/Day9/day9.ipynb
+++ b/Day9/day9.ipynb
@@ -2,24 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-557\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# 1.974.232.248 is to hight\n",
-    "\n",
     "def simplify(nums: list[int]) -> list[list[int]]:\n",
     "    result = [nums]\n",
     "    \n",
-    "    while sum(result[-1]) != 0:\n",
+    "    while not all(x == 0 for x in result[-1]):\n",
     "        last = result[-1]\n",
     "        result.append([r - l for l, r in zip(last, last[1:])])\n",
     "    \n",
@@ -36,7 +26,98 @@
     "\n",
     "input = [[int(x) for x in line.strip().split(' ')] for line in lines]\n",
     "\n",
-    "print(sum([extrapolate(simplify(nums)) for nums in input[194:195]]))\n"
+    "extrapolated_values = [extrapolate(simplify(nums)) for nums in input]\n",
+    "print(sum(extrapolated_values))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This cell is used for testing the code above"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "\n",
+    "itcount = 10\n",
+    "\n",
+    "testnums = []\n",
+    "solutions =[]\n",
+    "full_solutions = []\n",
+    "\n",
+    "for _ in range(itcount):\n",
+    "    length = random.randint(3, 10)\n",
+    "    diff = random.randint(-5, 20)\n",
+    "    if diff == 0:\n",
+    "        diff = 1\n",
+    "    \n",
+    "    full_solutions.append([[0 for _ in range(length -1)]])\n",
+    "    \n",
+    "    a = [diff for _ in range(length)]\n",
+    "    full_solutions[-1].append(a)\n",
+    "    while len(a) != 20:\n",
+    "        b = [random.randint(-500, 1000)]\n",
+    "        for diff in a:\n",
+    "            b.append(b[-1] + diff)\n",
+    "        a = b\n",
+    "        full_solutions[-1].append(a)\n",
+    "    testnums.append(a[:-1])\n",
+    "    solutions.append(a[-1])\n",
+    "    \n",
+    "\n",
+    "for index, (nums, solution) in enumerate(zip(testnums, solutions)):\n",
+    "    try:\n",
+    "        snums = simplify(nums)\n",
+    "        exnum = extrapolate(snums)\n",
+    "        if not exnum == solution:\n",
+    "            print(\"does not match solution\")\n",
+    "            print(exnum)\n",
+    "            print(snums)\n",
+    "            print(full_solutions[index][::-1])\n",
+    "            break\n",
+    "    except:\n",
+    "        print(\"There was an error\")\n",
+    "        print(nums)\n",
+    "        print(simplify(nums))\n",
+    "        print(full_solutions[index][::-1])\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def simplify(nums: list[int]) -> list[list[int]]:\n",
+    "    result = [nums]\n",
+    "    \n",
+    "    while not all(x == 0 for x in result[-1]):\n",
+    "        last = result[-1]\n",
+    "        result.append([r - l for l, r in zip(last, last[1:])])\n",
+    "    \n",
+    "    return result\n",
+    "\n",
+    "def extrapolate_backwards(nums: list[list[int]]) -> int:\n",
+    "    for l, r in zip(nums[::-1], nums[::-1][1:]):\n",
+    "        r.insert(0, r[0] - l[0])\n",
+    "        \n",
+    "    \n",
+    "    return nums[0][0]\n",
+    "\n",
+    "with open('input.txt') as f:\n",
+    "    lines = f.readlines()\n",
+    "\n",
+    "input = [[int(x) for x in line.strip().split(' ')] for line in lines]\n",
+    "\n",
+    "extrapolated_values = [extrapolate_backwards(simplify(nums)) for nums in input]\n",
+    "print(sum(extrapolated_values))"
    ]
   }
  ],
@@ -56,7 +137,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
