Day 13 is as clean as my reflection

--- a/Day12/day12.ipynb
+++ b/Day12/day12.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6827\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import re\n",
     "import numpy as np\n",
@@ -48,10 +40,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#:3\n",
+      "#:2\n",
+      "#:1\n",
+      "root:0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from __future__ import annotations\n",
+    "import numpy as np\n",
+    "from typing import Literal\n",
+    "from dataclasses import dataclass\n",
+    "\n",
+    "@dataclass\n",
+    "class Node:\n",
+    "    value: Literal['#', '.'] = None\n",
+    "    left: Node = None\n",
+    "    right: Node = None\n",
+    "    parent: Node = None\n",
+    "    depth: int = 0\n",
+    "    \n",
+    "    def __repr__(self):\n",
+    "        return f'{\"root\" if self.value is None else self.value}:{self.depth}'\n",
+    "\n",
+    "def inorder(node: Node):\n",
+    "    if node is None:\n",
+    "        return\n",
+    "    \n",
+    "    inorder(node.left)\n",
+    "    print(node)\n",
+    "    inorder(node.right)\n",
+    "\n",
+    "def check_pattern(pattern: np.ndarray, occurences: list[int]) -> int:\n",
+    "    occurences_counter = 0\n",
+    "    occurences_index = 0\n",
+    "    counting_defacts = False\n",
+    "    for index, current_char in enumerate(pattern):\n",
+    "        if current_char == '#':\n",
+    "            counting_defacts = True\n",
+    "            occurences_counter += 1\n",
+    "            if occurences_counter > occurences[occurences_index]:\n",
+    "                return index\n",
+    "        \n",
+    "        elif counting_defacts:\n",
+    "            if occurences[occurences_index] != occurences_counter:\n",
+    "                return index\n",
+    "            \n",
+    "            occurences_index += 1\n",
+    "            occurences_counter = 0\n",
+    "            counting_defacts = False\n",
+    "            \n",
+    "            if occurences_index == len(occurences):\n",
+    "                return -1\n",
+    "            \n",
+    "    return -1\n",
+    "\n",
+    "with open('input-small.txt') as f:\n",
+    "    input = f.readlines()\n",
+    "    \n",
+    "# input = [(\n",
+    "#     np.tile(np.append(np.array([c for c in line.strip().split()[0]]), '?'), 5)[0:-1], \n",
+    "#     np.array(line.strip().split()[1].split(',') * 5, dtype=np.uint8)    \n",
+    "# ) for line in input]\n",
+    "\n",
+    "input = [(\n",
+    "    np.array([c for c in line.strip().split()[0]]), \n",
+    "    line.strip().split()[1].split(',')\n",
+    "    ) for line in input]\n",
+    "\n",
+    "for pattern, occurences in input:\n",
+    "    question_marks = np.where(pattern == '?')[0]\n",
+    "    root = Node()\n",
+    "    current_node = root\n",
+    "    for i in range(len(question_marks)):\n",
+    "        current_node.left = Node('#', parent=current_node, depth=i+1)\n",
+    "        current_node = current_node.left\n",
+    "\n",
+    "    inorder(root)\n",
+    "    break\n",
+    "    \n",
+    "        \n"
+   ]
   }
  ],
  "metadata": {
@@ -70,7 +147,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
