2025 Day 2: Optimize Part 2

--- a/2025/Day2/day2.ipynb
+++ b/2025/Day2/day2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 102,
    "id": "c55c98f9",
    "metadata": {},
    "outputs": [],
@@ -13,23 +13,23 @@
     "class RangeObj:\n",
     "    start: int\n",
     "    end: int\n",
-    "    digits: int\n",
+    "    start_digits: int\n",
+    "    end_digits: int\n",
     "    \n",
     "    def __repr__(self):\n",
-    "        return f\"Range({self.start}-{self.end}, digits={self.digits})\"\n",
+    "        return f\"Range({self.start}-{self.end})\"\n",
     "\n",
     "with open(\"input.txt\") as f:\n",
     "    line = f.read().strip()\n",
     "    ranges = []\n",
     "    for r in line.split(\",\"):\n",
     "        a, b = map(int, r.split(\"-\"))\n",
-    "        digits = len(str(b))\n",
-    "        ranges.append(RangeObj(a, b, digits))"
+    "        ranges.append(RangeObj(a, b, len(str(a)), len(str(b))))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 103,
    "id": "87bd0718",
    "metadata": {},
    "outputs": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 104,
    "id": "5e940d30",
    "metadata": {},
    "outputs": [
@@ -96,19 +96,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 44,
+   "cell_type": "markdown",
    "id": "eacb1e6c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Part 2: 46270373595\n"
-     ]
-    }
-   ],
    "source": [
     "with open(\"input.txt\") as f:\n",
     "    line = f.read().strip()\n",
@@ -128,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 105,
    "id": "95626f8e",
    "metadata": {},
    "outputs": [
@@ -136,38 +126,49 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Generated 632,730 candidates. 821 invalid numbers where found. The answer is:\n",
       "46270373595\n"
      ]
     }
    ],
    "source": [
-    "def check_number(s: str | int) -> bool:\n",
-    "    s = str(s)\n",
-    "    for i in range(1, len(s) // 2 + 1):\n",
-    "        pair = s[:i]\n",
-    "        if pair * (len(s) // i) == s:\n",
-    "            return True\n",
-    "    return False\n",
-    "\n",
     "from itertools import product\n",
+    "from math import ceil, floor\n",
     "\n",
     "invalid_codes_set = set()\n",
     "\n",
+    "generated = 0\n",
+    "\n",
     "for r in ranges:\n",
-    "    for batch_size in range(1, r.digits // 2 + 1):\n",
+    "    min_first_digit = int(str(r.start)[0])\n",
+    "    max_first_digit = int(str(r.end)[0])\n",
+    "    min_second_digit = int(str(r.start)[1]) if r.start_digits > 1 else 0\n",
+    "    max_second_digit = int(str(r.end)[1])\n",
+    "    for batch_size in range(1, r.end_digits // 2 + 1):\n",
+    "        if r.start_digits % batch_size and r.end_digits % batch_size:\n",
+    "            generated += 1\n",
+    "            continue\n",
     "        for digits in product(range(10), repeat=batch_size):\n",
-    "            for repetitions in range(len(str(r.start)), r.digits + 1):\n",
-    "                num_str = ''.join(map(str, digits)) * (repetitions // batch_size)\n",
+    "            if digits[0] == 0 or r.start_digits == r.end_digits and (digits[0] < min_first_digit or digits[0] > max_first_digit) :\n",
+    "                generated += 1\n",
+    "                continue\n",
+    "            for repetitions in range(ceil(r.start_digits / batch_size), floor(r.end_digits / batch_size) + 1 ):\n",
+    "                generated += 1\n",
+    "                num_str = ''.join(map(str, digits)) * repetitions\n",
     "                if num_str[0] == '0':\n",
     "                    continue\n",
     "                num = int(num_str)\n",
-    "                if num < r.start:\n",
+    "                if num < r.start or num < 11:\n",
     "                    continue\n",
     "                if num > r.end:\n",
     "                    break\n",
-    "                if check_number(num):\n",
-    "                    invalid_codes_set.add(num)\n",
+    "                invalid_codes_set.add(num)\n",
+    "                \n",
+    "missing = [n for n in invalid_codes if n not in invalid_codes_set]\n",
+    "if missing:\n",
+    "    print(\"Missing numbers:\", missing)\n",
     "\n",
+    "print(f\"Generated {generated:,} candidates. {len(invalid_codes_set)} invalid numbers where found. The answer is:\")\n",
     "print(sum(invalid_codes_set))"
    ]
   }
