--- a/2025/Day10/day10.ipynb
+++ b/2025/Day10/day10.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "9b979573",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
    "metadata": {},
    "source": [
     "## Part 1\n",
-    "Takes ~5min 30s"
+    "Takes ~3s"
    ]
   },
   {
@@ -44,21 +44,13 @@
    "execution_count": null,
    "id": "42ad5669",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total button presses across all problems: 500.0 True, True, True, False, True], buttons=[(1, 2, 3, 4, 5), (0, 2, 3, 6), (1, 6), (2, 3, 6), (0, 1, 2, 3, 6), (1, 2, 3, 4, 6)], unknown=[13, 186, 190, 190, 176, 169, 31])8, 9), (0, 1, 3, 5, 6, 8), (0, 1, 3, 4, 5), (1, 3), (1, 2)], unknown=[44, 54, 5, 69, 43, 61, 52, 27, 40, 20])nown=[57, 84, 40, 75, 83, 46, 49, 29, 45, 50])2, 210, 58, 81, 249])4, 58, 58])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "total_presses = []\n",
     "\n",
     "for i, problem in enumerate(problems):\n",
     "    print(f\"Solving problem {i}: {problem}\", end='\\r')\n",
-    "    optimize_variables = [pl.LpVariable(f'x{i}', lowBound=0, cat='Integer') for i in range(1, len(problem.buttons) + 1)]\n",
+    "    optimize_variables = [pl.LpVariable(f'x{i}', lowBound=0, upBound=1, cat='Integer') for i in range(1, len(problem.buttons) + 1)]\n",
     "    helper_variables = [pl.LpVariable(f'k{i}', lowBound=0, cat='Integer') for i in range(1, len(problem.leds) + 1)]\n",
     "    \n",
     "    optimize_prop = pl.LpProblem(f\"Problem_{i}\", pl.LpMinimize)\n",
@@ -88,19 +80,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "f05b06d0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Solving problem 187: Problem(leds=[False, True, True, True, True, False, True], buttons=[(1, 2, 3, 4, 5), (0, 2, 3, 6), (1, 6), (2, 3, 6), (0, 1, 2, 3, 6), (1, 2, 3, 4, 6)], joltage_requirement=[13, 186, 190, 190, 176, 169, 31]), 3, 5, 6, 8), (0, 1, 3, 4, 5), (1, 3), (1, 2)], joltage_requirement=[44, 54, 5, 69, 43, 61, 52, 27, 40, 20])ment=[57, 84, 40, 75, 83, 46, 49, 29, 45, 50])2, 210, 58, 81, 249])4, 58, 58])\n",
-      "Total button presses across all problems for Part 2: 19763\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "total_presses = []\n",
     "\n",
